The solution to the problem of incorrect text display on iPhone in the "Projects (Description)", "Education," and "Academic Path" sections. (Solution to issue #3).

--- a/scss/_media-queries.scss
+++ b/scss/_media-queries.scss
@@ -3,5 +3,6 @@
     html,
     body {
         width: 81rem;
+        -webkit-text-size-adjust: none;
     }
 }
