--- a/styles/style.css
+++ b/styles/style.css
@@ -746,5 +746,6 @@ body {
   html,
   body {
     width: 81rem;
+    -webkit-text-size-adjust: none;
   }
 }
